app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-detector
  labels:
    app: cloud-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-detector
  template:
    metadata:
      labels:
        app: cloud-detector
    spec:
      serviceAccountName: cloud-detector-sa
      containers:
        - name: webserver
          image: registry.access.redhat.com/ubi9/python-39:latest
          command:
            - python3
            - -c
            - |
              [...]
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-detector
  labels:
    app: cloud-detector
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: cloud-detector
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloud-detector
  labels:
    app: cloud-detector
spec:
  to:
    kind: Service
    name: cloud-detector
  port:
    targetPort: http
